--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -2460,10 +2460,11 @@ button:hover {
 
 .sim-modal {
   position: fixed;
+  color: white;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgb(255, 255, 255);
+  background-color: rgba(0, 0, 0, 0.603);
   padding: 20px;
   border-radius: 5px;
   outline: 3px solid #ffffff;
@@ -2482,7 +2483,7 @@ button:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgb(255, 255, 255);
+  background-color:rgba(0, 0, 0, 0.603);
   padding: 20px;
   border-radius: 5px;
   outline: 3px solid #ffffff;
