--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -2774,6 +2774,62 @@ button:hover {
   }
 }
 
+.cardpool2-ro {
+  margin: 28px 0 14px 30px;
+  background-color: rgba(80, 42, 170, 0.315);
+  border: 2px solid rgb(68, 17, 206);
+  border-radius: 5px;
+  height: 708px;
+  width: 70vw;
+  outline: 1px solid white;
+  transition: all 0.5s;
+}
+
+.no-cardpool-ro {
+  margin: 40px 0 14px 30px;
+  background-color: rgba(117, 90, 182, 0.315);
+  border: 2px solid rgb(68, 17, 206);
+  border-radius: 5px;
+  height: 56px;
+  width: 70vw;
+  outline: 1px solid white;
+  transition: all 0.5s;
+}
+
+.no-cardpool2-ro {
+  margin: 40px 0 14px 30px;
+  background-color: rgba(117, 90, 182, 0.315);
+  border: 2px solid rgb(68, 17, 206);
+  border-radius: 5px;
+  height: 95px;
+  width: 70vw;
+  outline: 1px solid white;
+  transition: all 0.5s;
+}
+
+.no-cardpool3-ro {
+  margin: 28px 0 14px 30px;
+  background-color: rgba(117, 90, 182, 0.315);
+  border: 2px solid rgb(68, 17, 206);
+  border-radius: 5px;
+  height: 708px;
+  width: 100%;
+  outline: 1px solid white;
+  transition: all 0.5s;
+}
+
+.scrollable2 {
+  margin: 0% 0% 0% .5%;
+  width: 99%;
+  height: 632px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  border: 1px solid rgba(0, 0, 0, 0.212);
+  background-color: rgba(15, 0, 50, 0.315);
+  border-radius: 2px;
+  outline: 1px solid rgba(255, 255, 255, 0.3);
+}
+
 @media screen and (max-width: 1330px) {
   .cards-page-card-list {
     display: grid;
@@ -2943,7 +2999,6 @@ button:hover {
 
   .media-vert-30 {
     margin-top: 30px;
-    margin-bottom: 30px;
   }
 
   .blackfooter {
@@ -3222,6 +3277,10 @@ button:hover {
     transition: all .5s;
   }
 
+  .media-bot-30 {
+    margin-bottom: 30px;
+  }
+
   .wide100 {
     width: 100%;
   }
@@ -3236,6 +3295,62 @@ button:hover {
 
   .stat-item {
     margin: auto;
+  }
+
+  .scrollable2 {
+    height: 56.5vh;
+  }
+
+  .inScrollable {
+    position: relative; /* Make the container a positioning context */
+    width: 100%; /* Ensure the image container takes the full width of the scrollable div */
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .cardpool2-ro {
+    margin: 0;
+    background-color: rgba(80, 42, 170, 0.315);
+    border: 2px solid rgb(68, 17, 206);
+    border-radius: 5px;
+    height: 70vh;
+    width: 100%;
+    outline: 1px solid white;
+    transition: all 0.5s;
+  }
+
+  .no-cardpool-ro {
+    margin: 0;
+    background-color: rgba(117, 90, 182, 0.315);
+    border: 2px solid rgb(68, 17, 206);
+    border-radius: 5px;
+    width: 100%;
+    outline: 1px solid white;
+    transition: all 0.5s;
+  }
+
+  .no-cardpool2-ro {
+    margin: 0;
+    background-color: rgba(117, 90, 182, 0.315);
+    border: 2px solid rgb(68, 17, 206);
+    border-radius: 5px;
+    height: 95px;
+    width: 100%;
+    outline: 1px solid white;
+    transition: all 0.5s;
+  }
+
+  .no-cardpool3-ro {
+    margin: 0;
+    background-color: rgba(117, 90, 182, 0.315);
+    border: 2px solid rgb(68, 17, 206);
+    border-radius: 5px;
+    height: auto;
+    width: 100%;
+    outline: 1px solid white;
+    transition: all 0.5s;
   }
 }
 
