--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -2500,6 +2500,26 @@ button:hover {
   z-index: 3;
 }
 
+.zone-menu {
+  width: 140px;
+  background-color: rgba(107, 107, 107, 0.75);
+  position: relative;
+  margin-bottom: 10px;
+  margin-top: -160px;
+  margin-right: -30px;
+  z-index: 3;
+}
+
+.zone-menu2 {
+  width: 140px;
+  background-color: rgba(107, 107, 107, 0.75);
+  position: relative;
+  margin-bottom: 10px;
+  margin-top: -135px;
+  margin-right: -30px;
+  z-index: 3;
+}
+
 .card-menu-item {
   width: 100%;
   height: 25px;
