--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -383,11 +383,12 @@ button:hover {
 
 .edit-modal {
   opacity: 0%;
-  color: black;
+  transition: all 0.5s;
 }
 
 .edit-modal:hover {
   opacity: 100%;
+  transition: all 0.5s;
 }
 
 .scrollable {
@@ -1470,7 +1471,7 @@ button:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: rgba(255, 255, 255, 0.9);
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 7px;
@@ -1479,27 +1480,26 @@ button:hover {
   z-index: 1000;
 }
 
-.medium-modal.dark {
+.medium-modal-dark {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: var(--color-body);
-  background-color: rgba(33, 24, 54, 0.692);
+  background-color: rgba(33, 24, 54, 0.9);
   padding: 20px;
   border: 1px solid #ccc;
+  border-radius: 7px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   max-width: 80%;
-  width: 400px; /* Adjust the width as needed */
   z-index: 1000;
 }
 
 .large-modal {
   position: fixed;
-  top: 50%;
+  top: 70px;
   left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgb(255, 255, 255);
+  transform: translate(-50%, 0%);
+  background-color: rgba(255, 255, 255, 0.9);
   padding: 20px;
   border-radius: 5px;
   outline: 3px solid #ffffff;
@@ -1508,20 +1508,24 @@ button:hover {
   z-index: 1000;
   overflow-x: visible;
   overflow-y: auto;
-  max-height: 80vh;
+  max-height: var(--window-height);
 }
 
-.large-modal.dark {
+.large-modal-dark {
   position: fixed;
-  top: 50%;
+  top: 70px;
   left: 50%;
-  transform: translate(-50%, -50%);
-  background-color: rgba(33, 24, 54, 0.692);
+  transform: translate(-50%, 0%);
+  background-color: rgba(33, 24, 54, 0.9);
   padding: 20px;
   border: 1px solid #ccc;
+  border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-  max-width: 80%;
+  max-width: 75%;
   z-index: 1000;
+  overflow-x: visible;
+  overflow-y: auto;
+  max-height: var(--window-height);
 }
 
 .black {
@@ -1536,7 +1540,7 @@ button:hover {
   background-color: rgba(0, 0, 0, 0.507);
   width: 100vw;
   height: 100vh;
-  z-index: 900;
+  z-index: 899;
 }
 
 .ultra2 {
@@ -2254,6 +2258,22 @@ button:hover {
 
 .flex {
   display: flex;
+}
+
+.flex-items {
+  display: flex;
+  align-items: center;
+}
+
+.flex-content {
+  display: flex;
+  justify-content: center;
+}
+
+.flex-full {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .builder-card-hand {
