--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -1466,6 +1466,34 @@ button:hover {
   }
 }
 
+.small-modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 7px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  max-width: 30%;
+  z-index: 1000;
+}
+
+.small-modal-dark {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(33, 24, 54, 0.9);
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 7px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  max-width: 30%;
+  z-index: 1000;
+}
+
 .medium-modal {
   position: fixed;
   top: 50%;
