--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -2164,7 +2164,7 @@ button:hover {
 .settings_container {
   position: relative;
   /* top: 25%; */
-  margin-top: 20vh;
+  margin-top: 15vh;
   /* transform: translateY(-50%); */
   z-index: 10;
   display: flex;
@@ -2173,7 +2173,7 @@ button:hover {
   align-items: center;
   flex-grow: 1;
   overflow: hidden;
-  height: 390px;
+  height: 442px;
   width: 110px;
   border-radius: 17px;
   border: 1px solid white;
@@ -2184,7 +2184,7 @@ button:hover {
 .settings_container_hide {
   position:relative;
   /* top: 25%; */
-  margin-top: 20vh;
+  margin-top: 15vh;
   /* transform: translateY(-50%); */
   z-index: 10;
   display: flex;
@@ -2207,7 +2207,7 @@ button:hover {
   flex-direction: column;
   align-items: center;
   flex-grow: 1;
-  height: 390px;
+  height: 442px;
   transition: all 0.3s ease-in-out;
 }
 
@@ -2284,6 +2284,13 @@ button:hover {
   font-size: 40px;
 }
 
+.volume {
+  cursor: pointer;
+  margin-top: 20px;
+  width: 40px;
+  height: 40px;
+}
+
 .flex {
   display: flex;
 }
@@ -2331,8 +2338,6 @@ button:hover {
 }
 
 .selected3 {
-  z-index: 20;
-  /* filter: brightness(1.5); */
   animation: pulse3 1.5s infinite;
 }
 
@@ -2911,6 +2916,19 @@ button:hover {
 /* Hide scrollbar for Chrome, Safari and Opera */
 .dd-button-row::-webkit-scrollbar {
   display: none;
+}
+
+.in-hand {
+  display: flex;
+  justify-content: center;
+  transition: all 0.5s;
+}
+
+.in-hand:hover {
+  display: flex;
+  justify-content: center;
+  transform: translate(0, -40px);
+  transition: all 0.5s;
 }
 
 @media screen and (max-width: 1330px) {
