--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -1819,7 +1819,7 @@ button:hover {
   align-items: center;
   justify-content: center;
   width: 200px;
-  margin: 0 0 0 20px;
+  margin: 0;
   border: 1px solid;
   border-color: var(--color-body);
   padding: 0px;
@@ -1831,7 +1831,7 @@ button:hover {
   align-items: center;
   justify-content: center;
   width: 200px;
-  margin: 0 0 0 20px;
+  margin: 0;
   border: 1px solid;
   border-color: var(--color-body);
   padding: 0px;
@@ -3013,9 +3013,12 @@ button:hover {
   margin-left: 20px;
 }
 
-.colorBorder {
+.fullTableBorder {
+  border: 2px solid;
   border-color: var(--color-body);
   width: var(--window-width600);
+  overflow: hidden;
+  z-index: 2;
 }
 
 @media screen and (max-width: 1330px) {
@@ -3607,7 +3610,7 @@ button:hover {
     font-weight: 700;
   }
 
-  .colorBorder {
+  .fullTableBorder {
     border: 1px solid;
     border-color: var(--color-body);
     width: auto;
