--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -3045,6 +3045,10 @@ button:hover {
   }
 }
 
+.wide100-2 {
+  width: 100vw;
+}
+
 @media screen and (max-width: 1330px) {
   .cards-page-card-list {
     display: grid;
