--- a/ghi/src/Massive.css
+++ b/ghi/src/Massive.css
@@ -9,7 +9,6 @@ body {
   position: absolute;
   top: 0;
   left: 0;
-  padding-top: 62px;
   height: 100%;
   width: 100%;
   background-image: linear-gradient(to right, rgba(255, 255, 255, 0.9), rgba(255, 255, 255, 0.9)), url("./backg.png");
@@ -136,7 +135,7 @@ body.dark::after {
 }
 
 :root {
-  --window-height: calc(100vh - 166px);
+  --window-height: calc(100vh - 190px);
   --window-height-account: calc(100vh - 180px);
   --window-widthx00: calc(100vw - 800px);
   --window-width200: calc(100vw - 200px);
@@ -228,6 +227,11 @@ button:hover {
 .left-h1{
   text-align: left;
   margin: 30px 5px 20px 5px;
+}
+
+.left-h1-2{
+  text-align: left;
+  margin: 0px 5px 20px 5px;
 }
 
 .left-h2{
@@ -1687,8 +1691,8 @@ button:hover {
   transition: all 0.5s;
 }
 
-.app-container {
-  position: relative;
+.app{
+  margin-top: 90px;
 }
 
 .content {
@@ -1903,6 +1907,10 @@ button:hover {
   padding: 0px;
 }
 
+.margin-top-63 {
+  margin-top: 63px;
+}
+
 .margin-top-93 {
   margin-top: 93px;
 }
@@ -2081,7 +2089,6 @@ button:hover {
 
 .deckSelect {
   position: absolute;
-  top: 62px;
 }
 
 .deckSelect2 {
@@ -2094,7 +2101,7 @@ button:hover {
 
 .deckSelect3 {
   position: absolute;
-  top: 155px;
+  top: 90px;
 }
 
 .deckSelect3 p {
@@ -3074,13 +3081,68 @@ button:hover {
 
 .newsRow::-webkit-scrollbar {
   width: 10px;
+  height: 10px;
 }
 
 .newsRow::-webkit-scrollbar-thumb {
-  background: #888;
+  background: rgb(81, 76, 104);
   border-radius: 5px;
   width: 100%;
 }
+
+/* .newsRow {
+  scrollbar-width: thin;
+  scrollbar-color: #888 transparent;
+}
+
+.newsRow:hover {
+  scrollbar-color: #555 transparent;
+}
+
+.newsRow::-moz-scrollbar {
+  width: 10px;
+}
+
+.newsRow::-moz-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+  width: 100%;
+} */
+
+/* *::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: rgb(81, 76, 104);
+  border-radius: 5px;
+  width: 100%;
+} */
+
+/* *:hover::-webkit-scrollbar-thumb {
+  background: #555;
+} */
+
+/* * {
+  scrollbar-width: thin;
+  scrollbar-color: #888 transparent;
+}
+
+*:hover {
+  scrollbar-color: #555 transparent;
+}
+
+*::-moz-scrollbar {
+  width: 10px;
+}
+
+*::-moz-scrollbar-thumb {
+  background: #888;
+  border-radius: 5px;
+  width: 100%;
+} */
+
 
 .newsSection {
   height: 55px;
@@ -3089,6 +3151,12 @@ button:hover {
 
 .no-wrap {
   white-space: nowrap;
+}
+
+.simulator {
+  position: absolute;
+  top: 66px;
+  width: 100vw;
 }
 
 @media screen and (max-width: 1330px) {
@@ -3521,7 +3589,7 @@ button:hover {
     width: 100%;
   }
 
-  .margin-top-93 {
+  .margin-top-63 {
     margin-top: 50px;
     margin-bottom: 50px;
   }
